fix horizontal scroll in footer

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6435,9 +6435,12 @@ label,
   color:#d17c11;
 
 }
+footer.row.footer{
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
 
-
-////////////* HEADER_NEW */
+/* HEADER_NEW */
 
 
